--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Sample Design</title>
+    <title>Tipsy Bean</title>
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar" aria-label="Main navigation">
             <div class="logo">
-                <img src="../assets/logo.jpeg" alt="Logo" style="height: 32px; vertical-align: middle; margin-right: 8px;">
-                Tipsy Bean
+                <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" style="height: 32px; vertical-align: middle; margin-right: 8px;">
+                <span>Tipsy Bean</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#Menu">Menu</a></li>
+                <li><a href="#menu">Menu</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact Us</a></li>   
             </ul>
@@ -33,36 +33,42 @@
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" class="active" aria-current="true" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    <article class="carousel-item">
+                        <figure>
+                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="First featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                        </figure>
                         <div class="container">
                             <div class="carousel-caption text-start">
-                                <h1>Example headline.</h1>
+                                <h2>Example headline.</h2>
                                 <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
                                 <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    </article>
+                    <article class="carousel-item">
+                        <figure>
+                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Second featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                        </figure>
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
+                                <h2>Another example headline.</h2>
                                 <p>Some representative placeholder content for the second slide of the carousel.</p>
                                 <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item active">
-                        <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    </article>
+                    <article class="carousel-item active">
+                        <figure>
+                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Third featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                        </figure>
                         <div class="container">
                             <div class="carousel-caption text-end">
-                                <h1>One more for good measure.</h1>
+                                <h2>One more for good measure.</h2>
                                 <p>Some representative placeholder content for the third slide of this carousel.</p>
                                 <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
                             </div>
                         </div>
-                    </div>
+                    </article>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -76,66 +82,72 @@
         </section>
 
         <!-- Marketing Section -->
-        <section class="container marketing">
+        <section class="container marketing" aria-label="Marketing Highlights">
             <div class="row">
-                <div class="col-lg-4">
-                    <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    <h2 class="fw-normal">Heading</h2>
+                <article class="col-lg-4">
+                    <figure>
+                        <svg aria-label="Marketing Highlight 1" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 1</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    </figure>
+                    <h3 class="fw-normal">Heading</h3>
                     <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
                     <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-                <div class="col-lg-4">
-                    <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    <h2 class="fw-normal">Heading</h2>
+                </article>
+                <article class="col-lg-4">
+                    <figure>
+                        <svg aria-label="Marketing Highlight 2" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 2</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    </figure>
+                    <h3 class="fw-normal">Heading</h3>
                     <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
                     <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-                <div class="col-lg-4">
-                    <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    <h2 class="fw-normal">Heading</h2>
+                </article>
+                <article class="col-lg-4">
+                    <figure>
+                        <svg aria-label="Marketing Highlight 3" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 3</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                    </figure>
+                    <h3 class="fw-normal">Heading</h3>
                     <p>And lastly this, the third column of representative placeholder content.</p>
                     <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
+                </article>
             </div>
         </section>
 
         <!-- Featurettes Section -->
-        <section>
+        <section aria-label="Featurettes">
             <hr class="featurette-divider">
-            <div class="row featurette">
+            <article class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
                     <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
                 </div>
-                <div class="col-md-5">
-                    <svg aria-label="Placeholder: 500x500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </div>
-            </div>
+                <figure class="col-md-5">
+                    <svg aria-label="Featurette 1 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 1</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                </figure>
+            </article>
             <hr class="featurette-divider">
-            <div class="row featurette">
+            <article class="row featurette">
                 <div class="col-md-7 order-md-2">
                     <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
                     <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
                 </div>
-                <div class="col-md-5 order-md-1">
-                    <svg aria-label="Placeholder: 500x500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </div>
-            </div>
+                <figure class="col-md-5 order-md-1">
+                    <svg aria-label="Featurette 2 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 2</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                </figure>
+            </article>
             <hr class="featurette-divider">
-            <div class="row featurette">
+            <article class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
                     <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
                 </div>
-                <div class="col-md-5">
-                    <svg aria-label="Placeholder: 500x500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </div>
-            </div>
+                <figure class="col-md-5">
+                    <svg aria-label="Featurette 3 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 3</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+                </figure>
+            </article>
             <hr class="featurette-divider">
         </section>
 
         <!-- Footer Section -->
-        <footer class="container">
+        <footer class="container" aria-label="Site Footer">
             <p class="float-end"><a href="#">Back to top</a></p>
             <p>© 2017–2025 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
         </footer>
