--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -10,62 +10,73 @@
 <body>
     <header>
         <nav class="navbar" aria-label="Main navigation">
-            <div class="logo">
-                <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" style="height: 32px; vertical-align: middle; margin-right: 8px;">
-                <span>Tipsy Bean</span>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact Us</a></li>   
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" style="height: 40px; margin-right: 10px; border-radius: 8px;">
+                <span class="fw-bold fs-4" style="color: var(--latte-coffee, #6f4e37);">Tipsy Bean</span>
+            </a>
+            <ul class="nav nav-links ms-auto">
+                <li class="nav-item"><a class="nav-link active" href="#home" aria-current="page">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Carousel Section -->
         <section aria-label="Featured Drinks Carousel" style="margin:0; padding:0;">
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" class="active" aria-current="true" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <article class="carousel-item">
+                    <article class="carousel-item active">
                         <figure>
-                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="First featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                            <img src="../assets/coffeeshopmain.jpg" alt="Tipsy Bean Coffee Shop" class="d-block w-100" style="height:100%;object-fit:cover;">
                         </figure>
                         <div class="container">
                             <div class="carousel-caption text-start">
-                                <h2>Example headline.</h2>
-                                <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                                <h2>Tipsy Bean</h2>
+                                <p class="opacity-75">
+                                    Welcome to Tipsy Bean!<br>
+                                    Experience the perfect blend of coffee and comfort in every cup.<br>
+                                    Start your day with us and enjoy a cozy atmosphere.
+                                </p>
                             </div>
                         </div>
                     </article>
                     <article class="carousel-item">
                         <figure>
-                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Second featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Menu"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                         </figure>
                         <div class="container">
                             <div class="carousel-caption">
-                                <h2>Another example headline.</h2>
-                                <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                                <h2>Menu</h2>
+                                <p>
+                                    Discover our handcrafted coffee creations.<br>
+                                    Signature blends and tasty treats await.<br>
+                                    Explore our menu and find your new favorite!
+                                </p>
+                                <p><a class="btn btn-lg btn-primary" href="#">View Menu</a></p>
                             </div>
                         </div>
                     </article>
-                    <article class="carousel-item active">
+                    <article class="carousel-item">
                         <figure>
-                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Third featured drink"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%" width="100%" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Delivery"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                         </figure>
                         <div class="container">
                             <div class="carousel-caption text-end">
-                                <h2>One more for good measure.</h2>
-                                <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                                <h2>Delivery</h2>
+                                <p>
+                                    Get your order from our delivery partners.<br>
+                                    Enjoy Tipsy Bean at home or work.<br>
+                                    Fast, fresh, and just a click away!
+                                </p>
+                                <p><a class="btn btn-lg btn-primary" href="#">Order Now</a></p>
                             </div>
                         </div>
                     </article>
@@ -80,79 +91,8 @@
                 </button>
             </div>
         </section>
-
-        <!-- Marketing Section -->
-        <section class="container marketing" aria-label="Marketing Highlights">
-            <div class="row">
-                <article class="col-lg-4">
-                    <figure>
-                        <svg aria-label="Marketing Highlight 1" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 1</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    </figure>
-                    <h3 class="fw-normal">Heading</h3>
-                    <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </article>
-                <article class="col-lg-4">
-                    <figure>
-                        <svg aria-label="Marketing Highlight 2" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 2</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    </figure>
-                    <h3 class="fw-normal">Heading</h3>
-                    <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </article>
-                <article class="col-lg-4">
-                    <figure>
-                        <svg aria-label="Marketing Highlight 3" class="bd-placeholder-img rounded-circle" height="140" width="140" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Highlight 3</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                    </figure>
-                    <h3 class="fw-normal">Heading</h3>
-                    <p>And lastly this, the third column of representative placeholder content.</p>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </article>
-            </div>
-        </section>
-
-        <!-- Featurettes Section -->
-        <section aria-label="Featurettes">
-            <hr class="featurette-divider">
-            <article class="row featurette">
-                <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-                    <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-                </div>
-                <figure class="col-md-5">
-                    <svg aria-label="Featurette 1 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 1</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </figure>
-            </article>
-            <hr class="featurette-divider">
-            <article class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-                    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-                </div>
-                <figure class="col-md-5 order-md-1">
-                    <svg aria-label="Featurette 2 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 2</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </figure>
-            </article>
-            <hr class="featurette-divider">
-            <article class="row featurette">
-                <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-                    <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-                </div>
-                <figure class="col-md-5">
-                    <svg aria-label="Featurette 3 image" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" width="500" preserveAspectRatio="xMidYMid slice" role="img" xmlns="http://www.w3.org/2000/svg"><title>Featurette 3</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-                </figure>
-            </article>
-            <hr class="featurette-divider">
-        </section>
-
-        <!-- Footer Section -->
-        <footer class="container" aria-label="Site Footer">
-            <p class="float-end"><a href="#">Back to top</a></p>
-            <p>© 2017–2025 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-        </footer>
     </main>
-
+    <!-- ...rest of your content... -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
