--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -38,149 +38,25 @@
     </header>
 
     <main>
-      <section
-        aria-label="Featured Drinks Carousel"
-        style="margin: 0; padding: 0"
-      >
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#myCarousel"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#myCarousel"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#myCarousel"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
+  <div class="hero-section" style="position: relative; width: 100vw; height: 100vh; overflow: hidden;">
+        <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Presentation" id="hero-image" />
+        <div class="hero-text-container">
+          <h1 class="display-1 fw-bold text-white hero-title">Tipsy Bean</h1>
+          <div class="hero-caption text-white">
+            <p class="lead mb-2"><span style="color:#c19a6b;font-weight:bold;">Crafted Coffee,</span> Inspired Moments.</p>
+            <p class="lead mb-2">Experience the art of brewing in every cup.</p>
+            <p class="lead">Your destination for taste, comfort, and connection.</p>
           </div>
-          <div class="carousel-inner">
-            <article class="carousel-item active">
-              <figure>
-                <img
-                  src="../assets/coffeeshopmain.jpg"
-                  alt="Tipsy Bean Coffee Shop"
-                  class="d-block w-100"
-                  style="height: 100%; object-fit: cover"
-                />
-              </figure>
-              <div class="container">
-                <div class="carousel-caption text-start">
-                  <h2>Tipsy Bean</h2>
-                  <p class="opacity-75">
-                    Welcome to Tipsy Bean!<br />
-                    Experience the perfect blend of coffee and comfort in every
-                    cup.<br />
-                    Start your day with us and enjoy a cozy atmosphere.
-                  </p>
-                </div>
-              </div>
-            </article>
-            <article class="carousel-item">
-              <figure>
-                <svg
-                  aria-hidden="true"
-                  class="bd-placeholder-img"
-                  height="100%"
-                  width="100%"
-                  preserveAspectRatio="xMidYMid slice"
-                  xmlns="http://www.w3.org/2000/svg"
-                  role="img"
-                  aria-label="Menu"
-                >
-                  <rect
-                    width="100%"
-                    height="100%"
-                    fill="var(--bs-secondary-color)"
-                  ></rect>
-                </svg>
-              </figure>
-              <div class="container">
-                <div class="carousel-caption">
-                  <h2>Menu</h2>
-                  <p>
-                    Discover our handcrafted coffee creations.<br />
-                    Signature blends and tasty treats await.<br />
-                    Explore our menu and find your new favorite!
-                  </p>
-                  <p>
-                    <a class="btn btn-lg btn-primary" href="#">View Menu</a>
-                  </p>
-                </div>
-              </div>
-            </article>
-            <article class="carousel-item">
-              <figure>
-                <svg
-                  aria-hidden="true"
-                  class="bd-placeholder-img"
-                  height="100%"
-                  width="100%"
-                  preserveAspectRatio="xMidYMid slice"
-                  xmlns="http://www.w3.org/2000/svg"
-                  role="img"
-                  aria-label="Delivery"
-                >
-                  <rect
-                    width="100%"
-                    height="100%"
-                    fill="var(--bs-secondary-color)"
-                  ></rect>
-                </svg>
-              </figure>
-              <div class="container">
-                <div class="carousel-caption text-end">
-                  <h2>Delivery</h2>
-                  <p>
-                    Get your order from our delivery partners.<br />
-                    Enjoy Tipsy Bean at home or work.<br />
-                    Fast, fresh, and just a click away!
-                  </p>
-                  <p>
-                    <a class="btn btn-lg btn-primary" href="#">Order Now</a>
-                  </p>
-                </div>
-              </div>
-            </article>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#myCarousel"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#myCarousel"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
+      </div>
       </section>
-      <div class="container col-xxl-8 px-4 py-5">
+  <div class="container col-xxl-8 px-4 py-5 about-section" id="about-section">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <img
-              src="bootstrap-themes.png"
+              src="../assets/logo.jpeg"
               class="d-block mx-lg-auto img-fluid"
-              alt="Bootstrap Themes"
+              alt="Coffee Shop Interior"
               width="700"
               height="500"
               loading="lazy"
@@ -191,22 +67,9 @@
               About us
             </h1>
             <p class="lead">
-              Quickly design and customize responsive mobile-first sites with
-              Bootstrap, the world’s most popular front-end open source toolkit,
-              featuring Sass variables and mixins, responsive grid system,
-              extensive prebuilt components, and powerful JavaScript plugins.
+              In the heart of the city, Tipsy Bean began as a dream between friends who believed every cup of coffee could spark a new story. From the aroma of freshly ground beans to the laughter echoing off brick walls, our shop became a haven for artists, thinkers, and wanderers alike.<br><br>
+              Here, every mug is a chapter, every pastry a plot twist, and every guest a cherished character in our ongoing tale. Welcome to Tipsy Bean—where your story is always brewing.
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
-                Primary
-              </button>
-              <button
-                type="button"
-                class="btn btn-outline-secondary btn-lg px-4"
-              >
-                Default
-              </button>
-            </div>
           </div>
         </div>
       </div>
