html css updates
updated html css for the hero banner

--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -13,20 +13,35 @@
   <header>
     <!-- Navbar Start -->
     <nav class="navbar" id="main-navbar">
-      <div class="navbar-logo" id="navbar-logo">
+      <div class="navbar-logo-title">
+        <div class="navbar-logo" id="navbar-logo">
         <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img" id="logo-img">
+        </div>
       </div>
+      
       <span class="navbar-title" id="navbar-title">Tipsy Bean</span>
-    </nav>
-    <ul class="navbar-links" id="navbar-links">
-      <li class="navbar-item"><a href="#home" class="navbar-link" id="nav-home">Home</a></li>
-      <li class="navbar-item"><a href="#about" class="navbar-link" id="nav-about">About</a></li>
-      <li class="navbar-item"><a href="#menu" class="navbar-link" id="nav-menu">Menu</a></li>
-      <li class="navbar-item"><a href="#order" class="navbar-link" id="nav-order">Order</a></li>
-    </ul>
+      <ul class="navbar-links" id="navbar-links">
+        <li class="navbar-item"><a href="#home" class="navbar-link" id="nav-home">Home</a></li>
+        <li class="navbar-item"><a href="#about" class="navbar-link" id="nav-about">About</a></li>
+        <li class="navbar-item"><a href="#menu" class="navbar-link" id="nav-menu">Menu</a></li>
+        <li class="navbar-item"><a href="#order" class="navbar-link" id="nav-order">Order</a></li>
+      </ul>
     </nav>
     
     <!-- Navbar End -->
+
+    <main class="main" id="main">
+      <section id="home" class="section">
+        <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Cup" class="main-image" id="main-image">
+          <div class="hero-container">
+            <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Cup" class="main-image" id="main-image">
+            <div class="hero-text">
+              <h1 class="hero-title">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
+              <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
+            </div>
+          </div>
+      </section>
+    </main>
   </header>
 </body>
 </html>
