update html css
html and css updated to hero image

--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -30,16 +30,15 @@
     
     <!-- Navbar End -->
 
-    <main class="main" id="main">
-      <section id="home" class="section">
-        <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Cup" class="main-image" id="main-image">
-          <div class="hero-container">
-            <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Cup" class="main-image" id="main-image">
-            <div class="hero-text">
-              <h1 class="hero-title">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
-              <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
-            </div>
-          </div>
+    <main>
+      <section class="hero" aria-label="Hero Banner">
+        <figure class="hero-image-wrapper">
+          <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
+          <figcaption class="hero-caption">
+            <h1 class="hero-title">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
+            <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
+          </figcaption>
+        </figure>
       </section>
     </main>
   </header>
