--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -31,6 +31,7 @@
     <!-- Navbar End -->
 
     <main>
+      <!-- ...existing code... -->
       <section class="hero" aria-label="Hero Banner">
         <figure class="hero-image-wrapper">
           <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
@@ -39,6 +40,40 @@
             <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
           </figcaption>
         </figure>
+      </section>
+      <!-- About Us Section -->
+      <section class="about-section" id="about-section">
+        <div class="about-content">
+          <div class="about-image">
+            <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="about-logo" />
+          </div>
+          <div class="about-text">
+            <h2 class="about-title">About Us</h2>
+            <p class="about-description">
+              In the heart of the city, Tipsy Bean began as a dream between friends<br>
+              who believed every cup of coffee could spark a new story. From the<br>
+              aroma of freshly ground beans to the laughter echoing off brick walls,<br>
+              our shop became a haven for artists, thinkers, and wanderers alike.<br>
+              Here, every mug is a chapter, every pastry a plot twist, and every guest a<br>
+              cherished character in our ongoing tale. Welcome to Tipsy Bean—where<br>
+              your story is always brewing.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Location Section -->
+      <section class="location-section" id="find-us">
+        <div class="location-content">
+          <div class="location-pin-wrapper">
+            <img src="../assets/pin.png" alt="Location Pin" class="location-pin" />
+          </div>
+          <h2 class="location-title">Find your way to us</h2>
+          <p class="location-description">
+            Looking for your next favorite coffee spot? Use the map below to find our location and<br>
+            enjoy a cozy cup at Tipsy Bean. We can’t wait to welcome you!
+          </p>
+          <a href="https://bit.ly/3I8A1pq" class="google-map-btn" target="_blank" rel="noopener">Google Map</a>
+        </div>
       </section>
     </main>
   </header>
