--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -1,3 +1,17 @@
+    <!-- Footer Section -->
+    <footer class="footer-section">
+      <div class="footer-content">
+        <div class="footer-text">&copy; 2025 Tipsy Bean. All rights reserved.</div>
+        <div class="footer-social">
+          <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
+            <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
+          </a>
+          <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
+            <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
+          </a>
+        </div>
+      </div>
+    </footer>
 
 <!DOCTYPE html>
 <html lang="en">
