--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -1,17 +1,4 @@
-    <!-- Footer Section -->
-    <footer class="footer-section">
-      <div class="footer-content">
-        <div class="footer-text">&copy; 2025 Tipsy Bean. All rights reserved.</div>
-        <div class="footer-social">
-          <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
-          </a>
-          <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
-          </a>
-        </div>
-      </div>
-    </footer>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,9 +12,10 @@
 </head>
 
 <body>
+  <!-- =============================== -->
   <!-- Navigation Bar -->
+  <!-- =============================== -->
   <header>
-    <!-- Navbar Start -->
     <nav class="navbar" id="main-navbar">
       <div class="navbar-logo-title">
         <div class="navbar-logo" id="navbar-logo">
@@ -42,11 +30,12 @@
         <li class="navbar-item"><a href="#order-section" class="navbar-link" id="nav-order">Order</a></li>
       </ul>
     </nav>
-    <!-- Navbar End -->
   </header>
 
   <main>
+    <!-- =============================== -->
     <!-- Hero Banner Section -->
+    <!-- =============================== -->
     <section class="hero" aria-label="Hero Banner">
       <figure class="hero-image-wrapper">
         <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
@@ -57,7 +46,9 @@
       </figure>
     </section>
 
+    <!-- =============================== -->
     <!-- About Us Section -->
+    <!-- =============================== -->
     <section class="about-section" id="about-section">
       <div class="about-content">
         <div class="about-image">
@@ -78,7 +69,9 @@
       </div>
     </section>
 
+    <!-- =============================== -->
     <!-- Location Section -->
+    <!-- =============================== -->
     <section class="location-section" id="find-us">
       <div class="location-content">
         <div class="location-pin-wrapper">
@@ -92,7 +85,9 @@
       </div>
     </section>
 
+    <!-- =============================== -->
     <!-- Menu Section -->
+    <!-- =============================== -->
     <section class="menu-section" id="menu-section">
       <div class="menu-content">
         <h2 class="menu-title">Our Menu</h2>
@@ -109,7 +104,9 @@
       </div>
     </section>
 
+    <!-- =============================== -->
     <!-- Order Section -->
+    <!-- =============================== -->
     <section class="order-section" id="order-section">
       <div class="order-content">
         <div class="order-text">
@@ -124,9 +121,26 @@
           <img src="../assets/DeliveryIcon.png" alt="Delivery Icon" class="delivery-img" />
         </div>
       </div>
-    </section>  
-        
+    </section>
+    <!-- =============================== -->
+    <!--End of Main Section-->
   </main>
 
+  <!-- =============================== -->
+  <!-- Footer Section -->
+  <!-- =============================== -->
+  <footer class="footer-section">
+    <div class="footer-content">
+      <div class="footer-text">&copy; 2025 Tipsy Bean. All rights reserved.</div>
+      <div class="footer-social">
+        <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
+          <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
+        </a>
+        <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
+          <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
