--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tipsy Bean</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="TipsyBean/css/style.css">
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
     <nav class="navbar" id="main-navbar">
       <div class="navbar-logo-title">
         <div class="navbar-logo" id="navbar-logo">
-          <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img" id="logo-img">
+          <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img" id="logo-img">
         </div>
         <span class="navbar-title" id="navbar-title">Tipsy Bean</span>
       </div>
@@ -36,7 +36,7 @@
     <!-- Hero Banner Section -->
     <section class="hero" aria-label="Hero Banner">
       <figure class="hero-image-wrapper">
-        <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
+          <img src="TipsyBean/assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
         <figcaption class="hero-caption">
           <h1 class="hero-title">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
           <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
@@ -48,7 +48,7 @@
     <section class="about-section" id="about-section">
       <div class="about-content">
         <div class="about-image">
-          <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="about-logo" />
+          <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Logo" class="about-logo" />
         </div>
         <div class="about-text">
           <h2 class="about-title">About Us</h2>
@@ -69,7 +69,7 @@
     <section class="location-section" id="find-us">
       <div class="location-content">
         <div class="location-pin-wrapper">
-          <img src="../assets/pin.png" alt="Location Pin" class="location-pin" />
+          <img src="TipsyBean/assets/pin.png" alt="Location Pin" class="location-pin" />
         </div>
         <h2 class="location-title">Find your way to us</h2>
         <p class="location-description">
@@ -85,11 +85,11 @@
         <h2 class="menu-title">Our Menu</h2>
         <div class="menu-items">
           <div class="menu-card beverages">
-            <img src="../assets/Coffee.png" alt="Beverages" class="menu-img" />
+            <img src="TipsyBean/assets/Coffee.png" alt="Beverages" class="menu-img" />
             <h3 class="menu-item-title">Beverages</h3>
           </div>
           <div class="menu-card food">
-            <img src="../assets/Pasta.png" alt="Food" class="menu-img" />
+            <img src="TipsyBean/assets/Pasta.png" alt="Food" class="menu-img" />
             <h3 class="menu-item-title">Food</h3>
           </div>
         </div>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="order-image">
-          <img src="../assets/DeliveryIcon.png" alt="Delivery Icon" class="delivery-img" />
+          <img src="TipsyBean/assets/DeliveryIcon.png" alt="Delivery Icon" class="delivery-img" />
         </div>
       </div>
     </section>  
@@ -120,10 +120,10 @@
         <div class="footer-text">&copy; 2025 Tipsy Bean. All rights reserved.</div>
         <div class="footer-social">
           <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
+            <img src="TipsyBean/assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
           </a>
           <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
+            <img src="TipsyBean/assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
           </a>
         </div>
       </div>
