--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tipsy Bean</title>
   <link rel="stylesheet" href="TipsyBean/css/style.css">
+  <!-- Normalize CSS -->
+  <link rel="stylesheet" href="../Web-System-and-Technology/TipsyBean/css/normalize.css">
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -53,12 +55,12 @@
         <div class="about-text">
           <h2 class="about-title">About Us</h2>
           <p class="about-description">
-            In the heart of the city, Tipsy Bean began as a dream between friends<br>
-            who believed every cup of coffee could spark a new story. From the<br>
-            aroma of freshly ground beans to the laughter echoing off brick walls,<br>
-            our shop became a haven for artists, thinkers, and wanderers alike.<br>
-            Here, every mug is a chapter, every pastry a plot twist, and every guest a<br>
-            cherished character in our ongoing tale. Welcome to Tipsy Bean—where<br>
+            In the heart of the city, Tipsy Bean began as a dream between friends
+            who believed every cup of coffee could spark a new story. From the
+            aroma of freshly ground beans to the laughter echoing off brick walls,
+            our shop became a haven for artists, thinkers, and wanderers alike
+            Here, every mug is a chapter, every pastry a plot twist, and every guest a
+            cherished character in our ongoing tale. Welcome to Tipsy Bean—where
             your story is always brewing.
           </p>
         </div>
