HTML CSS Update
Updated HTML CSS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="TipsyBean/css/style.css">
   <!-- Normalize CSS -->
   <link rel="stylesheet" href="../Web-System-and-Technology/TipsyBean/css/normalize.css">
-  <!-- Google Fonts: Montserrat -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
   <main>
     <!-- Hero Banner Section -->
-    <section class="hero" aria-label="Hero Banner">
+    <section id="home" class="hero" aria-label="Hero Banner">
       <figure class="hero-image-wrapper">
           <img src="TipsyBean/assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image">
         <figcaption class="hero-caption">
@@ -50,7 +50,7 @@
     <section class="about-section" id="about-section">
       <div class="about-content">
         <div class="about-image">
-          <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Logo" class="about-logo" />
+          <img src="/Web-System-and-Technology/TipsyBean/assets/BlackLogo.png" alt="Tipsy Bean Logo" class="about-logo" />
         </div>
         <div class="about-text">
           <h2 class="about-title">About Us</h2>
@@ -77,14 +77,14 @@
         <p class="location-description">
           Looking for your next favorite coffee spot? Use the map below to find our location
         </p>
-        <a href="https://bit.ly/3I8A1pq" class="google-map-btn" target="_blank" rel="noopener">Google Map</a>
+        <a href="https://bit.ly/3I8A1pq" class="google-map-btn" target="_blank" rel="noopener">Google Maps</a>
       </div>
     </section>
 
     <!-- Menu Section -->
     <section class="menu-section" id="menu-section">
       <div class="menu-content">
-        <h2 class="menu-title">Our Menu</h2>
+        <h2 class="menu-title">Menu</h2>
         <div class="menu-items">
           <div class="menu-card beverages">
             <img src="TipsyBean/assets/Coffee.png" alt="Beverages" class="menu-img" />
